# tree-sitter-sml

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
bindings/c/: tree-sitter-sml.h  tree-sitter-sml.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_sml/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSMLTests/: TreeSitterSmlTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
