[package]
name = "tree-sitter-sml"
description = "Standard ML (SML) grammar for tree-sitter"
version = "0.23.0"
author = "Matthew Fluet <Matthew.Fluet@gmail.com> (https://github.com/MatthewFluet)"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "standard-ml", "sml"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/MatthewFluet/tree-sitter-sml"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter = { version = "0.22" }

[build-dependencies]
cc = "1.0.87"
