[build-system]
grequires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-sml"
description = "Standard ML (SML) grammar for tree-sitter"
version = "0.23.0"
authors = [
  {name = "Matthew Fluet", email = "Matthew.Fluet@gmail.com"},
]
keywords = ["incremental", "parsing", "tree-sitter", "standard-ml", "sml"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed"
]
requires-python = ">=3.9"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/MatthewFluet/tree-sitter-sml"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
